--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "body-parser": "^1.18.2",
         "chokidar": "^2.0.3",
+        "exceljs": "^4.4.0",
         "express": "^4.16.3",
         "node-xlsx": "^0.12.1",
         "opn": "^5.3.0"
