--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "homepage": "https://github.com/moshang-xc/web-server#readme",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.7.9",
         "body-parser": "^1.18.2",
         "chokidar": "^2.0.3",
         "exceljs": "^4.4.0",
